<resources>
    <string name="app_name">Личный кабинет студента</string>

    <!-- Main info -->
    <string name="student_name">Патрушев Олег</string>
    <string name="student_surname">Фамилия</string>
    <string name="student_group">ПС-21</string>

    <!-- Pages titles -->
    <string name="info">Обо мне</string>
    <string name="schedule">Расписание</string>
    <string name="education">Образование</string>
    <string name="achievements">Достижения</string>
    <string name="progress">Успеваемость</string>
    <string name="grants">Стипендии</string>
    <string name="settings">Настройки</string>
    <string name="exit">Выход</string>
    <string name="exams">Экзамены</string>

    <string name="grantsTab">Стипендии</string>
    <string name="grantsPretendantTab">Претендант</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string-array name="spin">
        <item>Текущий семестр</item>
        <item>1 семестр</item>
        <item>2 семестр</item>
        <item>3 семестр</item>
        <item>4 семестр</item>
    </string-array>



</resources>
